# TilingGallery

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: debruijn.rs  main.rs  pinwheel.rs
