[package]
name = "tiling-gallery"
version = "0.1.0"
edition = "2024"
authors = ["Root Huang <1242727205@qq.com>"]
license = "GNU General Public License v3.0"
description = "generate beautiful tiling images"
repository = "https://github.com/roothch/TilingGallery"

[dependencies]
plotters = "0.3"
rand = "0.9"
svg = "0.18"
clap = { version = "4.0", features = ["derive"] }
csscolorparser = "0.7"
